# django-rest-api

./: .gitignore  README.md  docker-commands.md  docker-compose.dev.yml  docker-compose.yml  env.example  erd.md  learning-guide.md  pyproject.toml  redis-dev.conf  requirements.txt
.cursor/plans/: airbnb-clone-api-4bb22bc7.plan.md
.cursor/rules/: my-djano-learning.mdc
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
requirements/: base.txt  local.txt
